--- a/Lab 01/ReadMe
+++ b/Lab 01/ReadMe
@@ -31,3 +31,6 @@ tendencias observadas en el histograma.
 #Falta eso; punto 2.3#
 
 Este enfoque permitirá obtener una comprensión detallada de las características del flujo peatonal, crucial para mejoras en seguridad y eficiencia en entornos urbanos y otros espacios públicos.
+
+Yo creo que seria bueno contestar la pregunta de ¿por que usamos la estructura de diccionarios en vez de listas u otra estructura de datos? y ¿qué mejorariamos en la implementacion de este problema?
+
